Fix alignment of app linkouts

--- a/src/styles/features/search.css
+++ b/src/styles/features/search.css
@@ -202,6 +202,7 @@
   flex-flow: row wrap;
   justify-content: space-between;
   padding-bottom: 0.5em;
+  padding-right: 0.25em;
 }
 
 .app-link-action {
